kubernetes/applications/influxdb/influxdb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app: influxdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: influxdb
          image: influxdb:2.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8086
          volumeMounts:
            - name: influxdb-storage
              mountPath: /var/lib/influxdb2
      volumes:
        - name: influxdb-storage
          persistentVolumeClaim:
            claimName: influxdb-data-pvc
